# yadcc

./: .gitignore  README.md
custom_gatt_client/: CMakeLists.txt  main.c
custom_gatt_server/: CMakeLists.txt  gap_advertise.h  main.c  my_service.h  process_characteristic_a.h  readme.txt  service.gatt
floco/: README.md  pubspec.yaml
floco/lib/: app_config.dart  main.dart
floco/lib/screen/devices/: arduboard.dart  loco.dart
floco/lib/screen/nav/: bluetooth.dart  help.dart  home.dart  settings.dart
picow/: CMakeLists.txt  dcc.c  dcc.h  main.c  pulse.pio
picow/ble/: ble.h  gap_config.h  goodble_h.txt  goodgatt.txt  pico_demo_gatt_service.gatt
